--- a/src/App.css
+++ b/src/App.css
@@ -7,7 +7,7 @@
   --darkGrey:#5f5e5e;
   --mainWhite:#fff;
   --mainBlack:#222;
-  --mainTransistion: all 0.3s ease-in-out;
+  --mainTransition: all 0.3s ease-in-out;
   --mainSpacing:0.3rem;
 }
 
@@ -17,12 +17,30 @@
   letter-spacing: var(--mainSpacing);
   text-transform: capitalize;
 }
- .text-main{
-   color:var(--primaryColor)
- }
+.text-main{
+    color:var(--primaryColor)
+}
 
 body{
   font-family:'Open Sans', sans-serif!important;
   background: var(--mainGrey)!important;
   color: var(--mainBlack);
+}
+.main-link{
+  padding: 0.5rem 1rem;
+  background: var(--primaryColor);
+  color: var(--mainWhite);
+  text-transform: uppercase;
+  letter-spacing: var(--mainSpacing);
+  outline: 2px solid var(--primaryColor);
+  outline-offset: 4px;
+  border:none;
+  transition: var(--mainTransition) 
+}
+
+.main-link:hover{
+  background:var(--mainWhite);
+  text-decoration: none;
+  color:var(--primaryColor);
+  outline-color:var(--mainWhite);
 }
